wrapping border fixed

--- a/user-backgrounds.css
+++ b/user-backgrounds.css
@@ -35,10 +35,6 @@
 	--user-popout-position: center;
 }
 
-.userPopout-3XzG_A .wrapper-3t9DeA * {
-	z-index: 1;
-}
-
 .userPopout-3XzG_A .wrapper-3t9DeA::after {
 	z-index: unset;
 }
